--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,13 +33,21 @@ android {
 }
 
 dependencies {
+    def room_version = "2.4.2"
 
     // Firebase Dependecies
     implementation platform('com.google.firebase:firebase-bom:29.1.0')
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.firebaseui:firebase-ui-auth:7.2.0'
 
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
 
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
+
+
+
+    implementation 'com.hbb20:ccp:2.4.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
@@ -48,7 +56,9 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.firebase:firebase-auth:21.0.1'
     implementation 'androidx.annotation:annotation:1.2.0'
-    testImplementation 'junit:junit:4.+'
+    implementation 'com.google.firebase:firebase-database:20.0.3'
+    implementation 'com.google.firebase:firebase-storage:20.0.1'
+    testImplementation 'junit:junit:4'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 }
