--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="np.com.amansingh.chatme">
+    package="np.com.amansingh.chatme" >
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
@@ -12,24 +12,28 @@
         android:icon="@drawable/whatapp_logo"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Theme.ChatMe">
+        android:theme="@style/Theme.ChatMe" >
         <activity
-            android:name=".ChatRoom.ChatRoomActivity"
+            android:name=".activities.UserProfileActivity"
             android:exported="false" />
         <activity
-            android:name=".UserDetailsActivity"
+            android:name=".activities.ChatRoomActivity"
             android:exported="false" />
         <activity
-            android:name=".friendList.friendListActivity"
+            android:name=".activities.DetailsFillUpActivity"
             android:exported="false" />
         <activity
-            android:name=".otpActivity"
+            android:name=".activities.friendListActivity"
             android:exported="false" />
         <activity
-            android:name=".ui.main.launcherActivity"
+            android:name=".activities.otpActivity"
+            android:exported="false"
+            android:noHistory="true" />
+        <activity
+            android:name=".activities.launcherActivity"
             android:exported="true"
             android:noHistory="true"
-            android:theme="@style/Theme.SplashScreen">
+            android:theme="@style/Theme.SplashScreen" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -37,17 +41,17 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ui.main.agreementActivity"
-            android:exported="false" />
-        <activity
-            android:name=".phoneNumberLogin"
+            android:name=".activities.agreementActivity"
             android:exported="false"
             android:noHistory="true" />
         <activity
-            android:name=".MainActivity"
+            android:name=".activities.phoneNumberLogin"
+            android:exported="false"
+            android:noHistory="true" />
+        <activity
+            android:name=".activities.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:noHistory="true"
             android:theme="@style/Theme.ChatMe.NoActionBar" />
     </application>
 
